# MegaBot.py

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: docker-publish.yml
app/: main.py
app/functions/: mascot.py  music.py
mega-env/: pyvenv.cfg
megabot/: main.py  setup.py
megabot/functions/: mascot.py  music.py
megabot/tests/functions/: test_music.py
tests/functions/: test_music.py
